# coursework-1

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: my_operations.xlsx
reports/: category_report.csv
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
